# @configure_input@

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =	debian/libavp.default \
		debian/changelog  debian/dirs \
		debian/libavp.dirs \
		debian/compat \
		debian/docs \
		debian/libavp.init \
		debian/control \
		debian/gbp.conf \
		debian/libavp.postinst \
		debian/copyright \
		debian/rules

SUBDIRS = 	src/
